# malade

./: .env-template  .gitignore  README.md  pyproject.toml  results.ipynb
malade/: critic_agent.py  drug_categories.py  omop.py  omop_evaluation.py  omop_interactions.py
malade/doc/: doc_chat_config.py  fda_handler.py
malade/tools/: handling.py  openfda_search_tool.py  passing.py
malade/utils/: constants.py  formatting.py  openfda.py  pydantic.py  task.py
outputs/: interactions.json  omop_results.md  representative_drugs.json  representative_drugs.md
scripts/: generate_results.py  generate_summary_files.py
tests/: med_data_chat_test.py
